# cmake_json

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configuration.json
cmake/: configuration.cmake  find_packages.cmake  general.cmake  get_configuration_json.cmake  get_configuration_system.cmake  options.cmake  packaging.cmake
cmake/patches/BZip2/: 0001-Fix-source-extension-warning.patch  0002-fix-Lu-warnings.patch
cmake/patches/XLink/: 0001-fix-deprecate-warning.patch
cmake/patches/libarchive-luxonis/: 0001-disable-man-install.patch  0002-Remove-Hunter.patch
